parent: Bump apache dependencies for java 11 compatibility