@@ -195,7 +195,7 @@
                 <plugin>
                     <groupId>org.apache.felix</groupId>
                     <artifactId>maven-bundle-plugin</artifactId>
-                    <version>3.5.0</version>
+                    <version>4.1.0</version>
                     
                     <extensions>true</extensions>
                     <inherited>true</inherited>
@@ -246,7 +246,7 @@
             
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
+                <version>3.8.0</version>
 
                 <configuration>
                     <compilerArgument>-Xlint:all</compilerArgument>
@@ -276,7 +276,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
+                <version>2.22.1</version>
                 
                 <configuration>
                     <useFile>false</useFile>
@@ -288,7 +288,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>2.6</version>
+                <version>2.7</version>
                 <configuration>
                     <generateBackupPoms>false</generateBackupPoms>
                 </configuration>
@@ -601,7 +601,7 @@
                     </plugin>
                     <plugin>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.20</version>
+                        <version>2.22.1</version>
                         <executions>
                             <execution>
                                 <id>default-test</id>
@@ -610,12 +610,10 @@
                                     <goal>test</goal>
                                 </goals>
                                 <configuration>
-                                    <argLine>${surefireArgLine}</argLine>
                                 </configuration>
                             </execution>
                         </executions>
                         <configuration>
-                            <argLine>-XX:MaxPermSize=512m</argLine>
                         </configuration>
                     </plugin>
                     
